tandoori_admin | fix auto static ip assignment

--- a/roles/mowee.openvpn/templates/server.conf.j2
+++ b/roles/mowee.openvpn/templates/server.conf.j2
@@ -29,7 +29,7 @@ comp-lzo
 cipher AES-256-CBC
 
 # Static ip assignment
-client-config-dir /etc/openvpn/ccd/
+client-config-dir ccd
 
 # Log
 verb 3
