Enable apt monitoring on servers.

--- a/roles/mowee.shinken/templates/snmpd.conf.j2
+++ b/roles/mowee.shinken/templates/snmpd.conf.j2
@@ -83,3 +83,6 @@ linkUpDownNotifications  yes
 
 #  Run as an AgentX master agent
 master          agentx
+
+# Check APT updates
+exec aptupdate /usr/lib/nagios/plugins/check_apt
