--- a/roles/mowee.shinken/templates/hosts.j2
+++ b/roles/mowee.shinken/templates/hosts.j2
@@ -1,12 +1,6 @@
 {% if item in groups['production'] %}
-define host{
-        {% if item in groups['databases'] %}
-        use                     linux-snmp, postgresql
-        {% elif item in groups['reverse_proxies'] %}
-        use                     linux-snmp, nginx, pacemaker-snmp-node
-        {% else %}
-        use                     linux-snmp
-        {% endif %}
+define host {
+        use                     {{ hostvars[item]["host_templates"] }}
         contact_groups          admins
         host_name               {{ hostvars[item]['inventory_hostname'] }}
         address                 {{ virtual_network }}{{ hostvars[item]['v_inet'] }}
@@ -20,7 +14,7 @@ define host{
         _POSTGRESQLPASSWORD     InojducGeam3
         _POSTGRESQLPORT         5432
         {% endif %}
-        }
+}
 {% endif %}
 {% if item in groups['production-websites'] %}
 define host{
